# boltdbg

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  compile.sh  imgui.ini
.github/workflows/: code-quality.yml  pr-check.yml
cmake/: BoltDBGConfig.cmake.in  BoltDbgOptions.cmake  CompilerWarnings.cmake  FindGLFW.cmake  PlatformConfig.cmake  Sanitizer.cmake  compiler_warnings.cmake
docs/: BACKLOG  TODO.md  resources.md
include/: boltdbg.h
include/boltdbg/core/: process_control.h
include/boltdbg/engine/: BreakpointManager.cpp  breakpoint.h
include/boltdbg/util/: logger.h
scripts/: fetch_deps.sh  format.sh
src/: CMakeLists.txt  main.cpp
src/core/: process_control.cpp
src/util/: logger.cpp
tests/: CMakeLists.txt  test_logger.cpp  test_main.cpp
